Apply automated replacement with Collection.isEmpty