@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 /**
  * Utility to organize and consolidate match pair data from consensus sets.
@@ -42,7 +41,7 @@ public class ConsensusSetPairs {
     }
 
     public boolean hasSplitGroups() {
-        return splitGroupIds.size() > 0;
+        return !splitGroupIds.isEmpty();
     }
 
     public Set<String> getSplitGroupIds() {
@@ -82,9 +81,9 @@ public class ConsensusSetPairs {
         }
 
         // TODO: need to handle cases with only 2 layers (how do you know which is "bad"?)
-        if ((this.splitGroupIds.size() == 0) && (this.consistentGroupIds.size() == 2)) {
+        if ((this.splitGroupIds.isEmpty()) && (this.consistentGroupIds.size() == 2)) {
             // hack assumes last id is bad
-            final List<String> sortedGroupIds = this.consistentGroupIds.stream().sorted().collect(Collectors.toList());
+            final List<String> sortedGroupIds = this.consistentGroupIds.stream().sorted().toList();
             this.consistentGroupIds.remove(sortedGroupIds.get(1));
             this.splitGroupIds.add(sortedGroupIds.get(1));
         }
